Bug 134622  [Intro] Welcome page scrollbar calculations are off

--- a/org.eclipse.ui.intro.universal/themes/circles/html/shared.css
+++ b/org.eclipse.ui.intro.universal/themes/circles/html/shared.css
@@ -494,11 +494,11 @@ h1, p { margin-left : 10px; } /* required in mozilla so the page description is 
  */
 
 #page-content #top-left {
-  border: none; float: left; margin: 0px; padding: 0px; width: 50%;
+  border: none; float: left; margin: 0px; padding: 0px; width: 49%;
   clear: left;
 }
 #page-content #top-right {
-  border: none; float: right; margin: 0px; padding: 0px; width: 50%;
+  border: none; float: right; margin: 0px; padding: 0px; width: 49%;
   clear: right;
 }
 /* top-bottom divider - runs the entire width to ensure
@@ -510,11 +510,11 @@ h1, p { margin-left : 10px; } /* required in mozilla so the page description is 
 }
 
 #page-content #bottom-left {
-  border: none; float: left; margin: 0px; padding: 0px; width: 50%;
+  border: none; float: left; margin: 0px; padding: 0px; width: 49%;
   clear: left;
 }
 #page-content #bottom-right {
-  border: none; float: right; margin: 0px; padding: 0px; width: 50%;
+  border: none; float: right; margin: 0px; padding: 0px; width: 49%;
   clear: right;
 }
 
